fix/feat: spacing issues, added other games channel!

--- a/src/App.css
+++ b/src/App.css
@@ -24,7 +24,7 @@ h1 {
     justify-content: center;
     /* Center the videos */
     width: 100%;
-    margin-top: 5rem;
+    margin-top: 10rem;
 }
 
 .app-navbar {
